# xuanyu

./: $null  .gitignore  CCAS-Spec-v2.0.md  CODE_OF_CONDUCT.md  Cargo.toml  MCP.json  PROJECT_README_GUIDE.md  README.md  VISION.md  auto_fix_decls.py  build_l1.ps1  build_l2.bat  build_l2.ps1  build_l2_compiler.bat  build_l2_compiler.ps1  build_l2_final.bat  build_l2_final.ps1  build_l2_simple.ps1  build_selfhost.ps1  build_xyc.ps1  fix_all_ir_issues.py  fix_else_label.py  hello.xy  hello_xuanyu.xy  hello_xuanyu.xy.cache  link_bootstrap.ps1  link_simple.ps1  mini_compiler.xy  multiplication_table.xy  multiplication_table.xy.cache  multiplication_table_simple.xy  multiplication_table_simple.xy.cache  output.exe.tmp0  output.exe.tmp1  output.txt  simple_link_test.ps1  simple_loop.xy  simple_loop.xy.cache  simple_test.xy  test.xy  (+25 more)
docs/: CCAS_SPEC_V0.0.md  LLVM 编译时如何处理中文字符.md  VISION.md  XY语言_v0.1规范.md  未来计算栈模型.md  玄语编程指南.md  编码规范.md
examples/: bootstrap_verify.xy  calculator.xy  evaluator.xy  full_bootstrap_test.xy  full_bootstrap_test_v2.xy  hello.xy  hello.xy.cache  mod_test.xy  simple_test.xy  smart_calculator.xy  string_index_test.xy  test0.xy  test1.xy  test2.xy  test2b.xy  test3.xy  test_args.xy  test_basic.xy.cache  test_closure.xy  test_control_flow.xy  test_control_flow.xy.cache  test_convert.xy  test_data_structures.xy  test_enum.xy  test_enum_multiline.xy  test_error.xy  test_expr_param.xy  test_file.xy  test_file_ops.xy  test_generic_list.xy  test_import.xy  test_import_lib.xy  test_import_main.xy  test_input.xy  test_lambda.xy  test_lambda.xy.cache  (+18 more)
(+68 files in other folders)
