[package]
name = "xuanyu"
version = "0.1.0"
edition = "2021"
authors = ["玄语 Team <xuanyu@ccas.org>"]
description = "玄语编译器 - A Chinese-based compiler infrastructure"
license = "CC-BY-SA-4.0"

[dependencies]
thiserror = "1.0"
unicode-xid = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
lazy_static = "1.4"

[dependencies.inkwell]
version = "0.2.0"
features = ["llvm15-0"]
optional = true

[features]
default = []
llvm = ["inkwell"]
debug = []

[lib]
name = "xuanyu"
path = "src/lib.rs"

[[bin]]
name = "xy"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

# 集成测试配置
[[test]]
name = "integration"
path = "tests/unit/lexer_test.rs"

[[test]]
name = "parser_integration"
path = "tests/unit/parser_test.rs"

[[test]]
name = "codegen_integration"
path = "tests/unit/codegen_test.rs"
